# studierstube

./: CMakeLists.txt  CTestConfig.cmake  INSTALL  INSTALL_win32.txt  Makefile  SConstruct  SConstruct.new  StudierstubeConfig.cmake  ToDo.txt  bootstrap  build_and_clean_doxygen.bat  buildutils.py  configure.ac  create.bat  createClass.pl  makedist.sh  stb.pc.in  studierstube.spec  studierstube.spec.in
data/: SConscript  desktopViewer.iv  desktopViewerVideo.iv  kernel.xml  opentracker.xml  opentrackerTestSrc.xml  openvideoVideoWrapperSrc.xml  studierstubed.bat
data/ARToolKitPlus Example/: kernel.xml  opentracker.xml  openvideo.xml  scene.iv  viewer.iv
data/ARToolKitPlusExample/: kernel.xml  opentracker.xml  openvideo.xml  scene.iv  viewer.iv
data/ARToolKitPlusExample.WinCE/: QuickCamNotebookPro2.cal  kernel.xml  opentracker.xml  openvideo.xml  scene.iv  viewer.iv
data/ARToolKitPlusExample.WinXP/: dsvl.xml  kernel.xml  opentracker.xml  openvideo.xml  scene.iv  viewer.iv
data/ARToolKitPlusExample.WinXP.ES/: dsvl.xml  kernel.xml  openvideo.xml
data/MultimodalExample/: opentracker.xml  simpleScene.iv  studierstube_debug.bat  studierstube_release.bat
data/Simple Example/: kernel.xml  openvideo.xml  viewer.iv
data/SimpleExample/: kernel.xml  opentracker.xml  simpleScene.iv  studierstube.bat  studierstube_debug.bat  studierstube_release.bat  viewer.iv
data/magicLensExample/: testNoBlink.iv
debian/: changelog  control  rules
doc/: generate_doxygen.bat  studierstube_v4.dox
doc/doxygen/: footer.html  header.html
include/: SConscript
src/: CMakeLists.txt  SConscript  src.pro
src/base/: OS.cxx  base.pro  string.cxx
src/bootloader/: CMakeLists.txt  KernelLoader.cxx  KernelLoader.h  KernelLoader_Base.cxx  KernelLoader_Base.h  KernelLoader_Win32.cxx  KernelLoader_Win32.h  SConscript  bootloader.pro  main.cxx
src/common/: macros.h  string.h
src/components/: CMakeLists.txt  SConscript  components.pro
src/components/event/: CMakeLists.txt  EventBus.cxx  EventContext.cxx  EventContextFilter.cxx  EventModule.cxx  EventMouseSource.cxx  EventSink.cxx  EventSource.cxx  EventXIPBus.cxx  SConscript  SoColorBlobTrakEngine.cxx  SoEventAction.cxx  SoEventGroup.cxx  SoEventKit.cxx  SoEventNode.cxx  SoEventRoot.cxx  SoEventSeparator.cxx  SoEventSource.cxx  SoInputEvent.cxx  SoMultimodalEngine.cxx  SoOpenTrackerSource.cxx  SoTrackedArtifactKit.cxx  SoTrakEngine.cxx  event.cxx  event.pro  event_xip.cxx
src/components/starlight/: CMakeLists.txt  GLtools.cpp  InventorUtils.cxx  SConscript  SoAbortGroup.cpp  SoCapsule.cpp  SoClassLoader.cpp  SoCommand.cxx  SoConditionalTrigger.cpp  SoContext.cpp  SoContextElement.cpp  SoContextMultiSwitch.cpp  SoContextReport.cpp  SoContextSeparator.cpp  SoContextSwitch.cpp  SoEaseIn.cpp  SoEngineWrapper.cpp  SoExtrusionKit.cpp  SoFactorRotation.cpp  SoFaderFloatEngine.cpp  SoFaderVec3fEngine.cpp  SoFanIn.cpp  SoFileEnv.cxx  SoFileSubgraph.cpp  SoFrameBuffer.cpp  SoGLFrameBufferElement.cpp  SoGLStencilBufferElement.cpp  SoGoGoDeviceKit.cpp  SoHiddenGroup.cxx  SoKeyToggle.cpp  SoLinestringKit.cpp  SoMEFader.cpp  SoMFVec2s.cpp  SoMagicLens.cpp  SoMagicLensKit.cpp  SoMagicScene.cpp  SoMagicSceneKit.cpp  SoMagicStylesKit.cpp  SoMultMatrix.cpp  SoMultiExtrusionKit.cpp  (+32 more)
src/components/starlight/cg/: InsideLens.cg  LensFrontFace.cg
src/components/starlight/cg/Well Formatted/: BehindLens.cg
src/components/video/: CMakeLists.txt  SConscript  SoUndistortedVideoBackground.cxx  SoVideoBackground.cxx  Video.cxx  video.pro
src/components/viewer/: CMakeLists.txt  SConscript  SoDisplay.cxx  SoDisplay.h  SoImageCapture.cxx  SoOffAxisCamera.cxx  SoOffAxisZoomCamera.cxx  SoStbCamera.cxx  SoStbCamera.h  SoStudierstubeViewer.cxx  SoStudierstubeViewer.h  SoUndistortedVideoBackground.cxx  SoVideoBackground.cxx  SoViewport.cxx  SoViewport.h  SoWindowHandling.cxx  Viewer.cxx  Viewer.h  viewer.pro
src/components/viewer/controlmode/: MultRotRot.cxx  SoDesktopControlMode.cxx  SoDesktopControlMode.h  SoStbCameraControlMode.cxx  SoTrackedDisplayControlMode.cxx  SoTrackedViewpointControlMode.cxx  SoTrackedViewpointMobileDisplayControlMode.cxx
src/components/viewer/displaymode/: SoAnaglyphDisplayMode.cxx  SoDisplayMode.cxx  SoFieldSequentialDisplayMode.cxx  SoGLColorBufferElement.cxx  SoGLColorBufferElement.h  SoGLPolygonStippleElement.cxx  SoLineSequentialDisplayMode.cxx  SoLineSequentialDisplayMode.h
src/event/: OpenTrackerContext.cxx  OpenTrackerContext.h  SoTrackedItem.cxx  SoTrackedItem.h  StbEvent.cxx  StbEvent.h  StbModule.cxx  StbModule.h  StbSink.cxx  StbSink.h
src/kernel/: Application.cxx  Application.h  ApplicationBase.cxx  ApplicationBase.h  ApplicationThread.cxx  ApplicationThread.h  ApplicationThreadBase.cxx  ApplicationThreadBase.h  CMakeLists.txt  Component.cxx  Component.h  ComponentBase.cxx  ComponentBase.h  ComponentInfo.cxx  ComponentInfo.h  ComponentInfoBase.cxx  ComponentInfoBase.h  ComponentInfoWin32.cxx  ComponentInfoWin32.h  ComponentManager.cxx  ComponentManager.h  ComponentRetriever.cxx  ComponentRetriever.h  ComponentRetrieverBase.cxx  ComponentRetrieverBase.h  ComponentRetrieverWin32.cxx  ComponentRetrieverWin32.h  ComponentThread.cxx  ComponentThread.h  ComponentThreadBase.cxx  ComponentThreadBase.h  Component_Base.cxx  Component_Base.h  Component_Thread.h  Component_Thread_Base.cxx  Component_Thread_Base.h  Config.cxx  Config.h  Kernel.cxx  Kernel.h  (+26 more)
src/kernel/interfaces/: SoTrakEngineInterface.cxx
src/kernel/parameter/: Logging.cxx  Logging.h
src/sam/: LibLoader.cxx  Option.cxx  Option.h  StbLibLoader.h  Version.h
src/sosimple/: SoSimple.cpp  SoSimpleComponent.cpp  SoSimpleCursor.cpp  SoSimpleDevice.cpp  SoSimpleExaminerViewer.cpp  SoSimpleFullViewer.cpp  SoSimpleKeyboard.cpp  SoSimpleMouse.cpp  SoSimpleObject.cpp  SoSimpleViewer.cpp
src/system/: OS.cxx  OS.h
src/utils/: MultRotRot.cxx  MultRotRot.h
src/viewer/: SoDisplay.cxx  SoDisplay.h  SoOffAxisCamera.cxx  SoOffAxisCamera.h  SoStbCamera.cxx  SoStbCamera.h  SoStudierstubeViewer.cxx  SoStudierstubeViewer.h  SoViewport.cxx  Viewer.cxx  Viewer.h
(+252 files in other folders)
