FILE(GLOB_RECURSE stbkernel_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.cxx ../base/*.cxx ../base/*.cpp)
FILE(GLOB_RECURSE stbkernel_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ../../include/stb/kernel/*.h ../../include/stb/base/*.h)

IF(WIN32)
   ADD_DEFINITIONS(-DKERNEL_EXPORTS)
ENDIF(WIN32)

ADD_LIBRARY(stbkernel ${stbkernel_HEADERS} ${stbkernel_SOURCES})
TARGET_LINK_LIBRARIES(stbkernel ${COIN_LIBRARIES} ${ACE_LIBRARIES} ${TINY_XML_LIBRARY})

SET_TARGET_PROPERTIES(stbkernel PROPERTIES VERSION ${CPACK_PACKAGE_VERSION} SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR})
INSTALL(TARGETS stbkernel DESTINATION ${CMAKE_INSTALL_LIBDIR})
