FILE(GLOB_RECURSE stbviewer_qt_SOURCES *.cpp *.cxx)
FILE(GLOB stbviewer_qt_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ../../../include/stb/components/viewer/*.h)

IF(WIN32)
   ADD_DEFINITIONS(-DVIEWER_EXPORTS)
ENDIF(WIN32)

# Qt:
INCLUDE(${QT_USE_FILE})

IF (QUARTER_FOUND)
   # Quarter
   ADD_DEFINITIONS(-DUSE_QUARTER)
ELSE (QUARTER_FOUND)
   # SoQt:
   ADD_DEFINITIONS(-DUSE_SOQT)
ENDIF (QUARTER_FOUND)

ADD_LIBRARY(stbviewer_qt ${stbviewer_qt_HEADERS} ${stbviewer_qt_SOURCES})
TARGET_LINK_LIBRARIES(stbviewer_qt stbkernel ${QT_LIBRARIES})

IF (QUARTER_FOUND)
   TARGET_LINK_LIBRARIES(stbviewer_qt ${QUARTER_LIBRARIES})
ELSE (QUARTER_FOUND)
   TARGET_LINK_LIBRARIES(stbviewer_qt ${SOQT_LIBRARIES})
ENDIF (QUARTER_FOUND)

SET_TARGET_PROPERTIES(stbviewer_qt PROPERTIES VERSION ${CPACK_PACKAGE_VERSION} SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR})
INSTALL(TARGETS stbviewer_qt DESTINATION ${CMAKE_INSTALL_LIBDIR})
